--- a/src/templates/auth/register.html
+++ b/src/templates/auth/register.html
@@ -16,7 +16,8 @@
             <input type="password" name="password" id="password" required>
             <input type="submit" value="Register">
         </form>
-        {% endblock %}</title>
+        {% endblock %}
+    </title>
 </head>
 <body>
 
