--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -25,7 +25,8 @@
             <div class="flash">{{ message }}</div>
             {% endfor %}
             {% block content %}{% endblock %}
-        </section></title>
+        </section>
+    </title>
 </head>
 <body>
 
