data interacting models segregated + organized 2

--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -7,9 +7,9 @@
 {% block content %}
 <form method="post">
     <label for="username">Username</label>
-    <input name="username" id="username" required>
+    <input id="username" name="username" required>
     <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
+    <input id="password" name="password" required type="password">
     <input type="submit" value="Log In">
 </form>
 {% endblock %}
