--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title><!doctype html>
         <title>{% block title %}{% endblock %} - Flaskr</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
         <nav>
             <h1>Flaskr</h1>
             <ul>
