--- a/src/templates/blog/update.html
+++ b/src/templates/blog/update.html
@@ -7,13 +7,13 @@
 {% block content %}
 <form method="post">
     <label for="title">Title</label>
-    <input name="title" id="title" value="{{ request.form['title'] or post['title'] }}" required>
+    <input id="title" name="title" required value="{{ request.form['title'] or post['title'] }}">
     <label for="body">Body</label>
-    <textarea name="body" id="body">{{ request.form['body'] or post['body'] }}</textarea>
+    <textarea id="body" name="body">{{ request.form['body'] or post['body'] }}</textarea>
     <input type="submit" value="Save">
 </form>
 <hr>
 <form action="{{ url_for('blog.delete', id=post['id']) }}" method="post">
-    <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
+    <input class="danger" onclick="return confirm('Are you sure?');" type="submit" value="Delete">
 </form>
 {% endblock %}
