--- a/src/views/src/atoms/Header.css
+++ b/src/views/src/atoms/Header.css
@@ -1,18 +1,24 @@
-nav{
-    display:flex;
-    flex-wrap:wrap;
-    }
-    nav a {
-    text-decoration: none;
-    display:block;
-    padding: 15px 25px;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
     text-align: center;
-    background-color: rgb(189, 185, 185);
-    color:#464141;
-    margin:0;
-    font-family:sans-serif;
-    }
-    nav a:hover {
-    background-color: #f7832f;
-    color:#ffffff;
-    }
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #111;
+  }
