--- a/src/views/src/atoms/SinglePost.css
+++ b/src/views/src/atoms/SinglePost.css
@@ -2,7 +2,6 @@
     background-color: #513689;
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: x-large;
     box-sizing: border-box;
     border: solid white;
     margin-left: 20px;
@@ -10,4 +9,44 @@
     margin-bottom: 1em;
     margin-top: 1em;
     border-radius: 10px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.title{
+    font-size: 40px;
+    font-weight: bolder;
+    float: left;
+}
+.body{
+    font-size: 25px;
+    font-weight: normal;
+    float: right;
+}
+.username{
+    font-size: 20px;
+    font-weight: lighter;
+}
+.created_by{
+    font-size: 20px;
+    font-weight: lighter;
+}
+
+.simpletitlebody{
+    display: inline-flexbox;
+    flex-direction: row;
+    /* align-content: flex-start;
+    align-items: center;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center; */
+}
+
+.simpleusercreated{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
 }
